2009-11-23 Roman
- FIX:SYS.XML: Optimal encode function to XML is fixed. Error post on parsing error is fixed.


2009-11-22 Roman
- !!!!:SYS.XML: XML node convert to stream, function save(), is made optimal for time.
- Protocol.SelfSystem: Debug messages is added for input protocol tune allow.
- FIX:UI.VCAEngine: Default command for speech synth ru_tts is fixed.


2009-11-20 Roman
- !:SYS: The User's system API, based on object TCntrNodeObj is expanded for user permition control. TAreaObj object is renamed to TArrayObj.
- !!:SYS: User's API functions is added to OpenSCADA core object: time, localtime, strftime, strptime and cron.
- !!:DAQ.JavaLikeCalc: User's API functions is added to string type value: insert, replace, toReal, toInt, parse, parsePath and path2sep.


2009-11-17 Roman
- FIX:UI.QTCfg, UI.Vision: The popup calendar of enter fields is improved for lock write new values,
    enable grid and set Monday as week start.
- FIX:QT locale is force set for calendar localisation fix.


2009-11-14 Roman
- !!:FIX:SYS.Res: Timeouted resource lock and deadlock control is fixed.
- UI.QTCfg, UI.Vision: The popup calendar is enabled for Date and DateTime enter fields.
- DAQ.BlockCalc: Disable to modify check for output links.
- FIX:SYS: The configure.in is fixed for build on autoconf 2.64.


2009-11-13 Roman
- FIX:DAQ.JavaLikeCalc: Prevent to recompile equal functions is set.
- FIX:UI.VCAEngine: Lock run session is fixed on time self page close.


2009-11-12 Roman
- DAQ.ICP_DAS: The module I-8017 hang on fast acquisition detect is added.
- FIX:UI.VCAEngine: Attributes type changing fix is return to back by wrong fix cause.


2009-11-11 Roman
- FIX:DAQ.ModBus: ModBUS block's resource missing cause crash is fixed.
- !:SYS: Multiply start preventing is added to demo-start and user-start scripts.
- !!:SYS: User's API functions is added to OpenSCADA core object: system(), message(), XMLNode() and cntrReq().